@@ -1,33 +1,33 @@
-package remora.remora.Adapter;
+package remora.remora.Translation.Adapter;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Component;
 
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.net.MalformedURLException;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 import java.util.HashMap;
 import java.io.InputStream;
 
-public class Papago {
-    private static String clientId;
-    private static String clientSecret;
+@Component
+public class Papago implements TranslationAdapter {
+    @Value("${papago.id}")
+    private String clientId;
+    @Value("${papago.pw}")
+    private String clientSecret;
 
-    public static String call(String originText) {
+    public String translate(String originText) {
         String apiURL = "https://openapi.naver.com/v1/papago/n2mt";
         String text;
-        try {
-            text = URLEncoder.encode(originText, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("Encoding fail", e);
-        }
+        text = URLEncoder.encode(originText, StandardCharsets.UTF_8);
 
         Map<String, String> requestHeaders = new HashMap<>();
         requestHeaders.put("X-Naver-Client-Id", clientId);
@@ -35,11 +35,11 @@ public class Papago {
 
         String responseBody = post(apiURL, requestHeaders, text);
 
-        System.out.println(responseBody);
+        System.out.println("responseBody = " + responseBody);
         return responseBody;
     }
 
-    private static String post(String apiUrl, Map<String, String> requestHeaders, String text) {
+    private String post(String apiUrl, Map<String, String> requestHeaders, String text) {
         HttpURLConnection con = connect(apiUrl);
         String postParams = "source=en&target=ko&text=" + text;
         try {
@@ -67,7 +67,7 @@ public class Papago {
         }
     }
 
-    private static HttpURLConnection connect(String apiUrl) {
+    private HttpURLConnection connect(String apiUrl) {
         try {
             URL url = new URL(apiUrl);
             return (HttpURLConnection) url.openConnection();
@@ -78,7 +78,7 @@ public class Papago {
         }
     }
 
-    private static String readBody(InputStream body) {
+    private String readBody(InputStream body) {
         InputStreamReader streamReader = new InputStreamReader(body);
 
         try (BufferedReader lineReader = new BufferedReader(streamReader)) {
@@ -93,15 +93,5 @@ public class Papago {
         } catch (IOException e) {
             throw new RuntimeException("API 응답을 읽는데 실패했습니다.", e);
         }
-    }
-
-    @Value("${papago.id}")
-    public static void setClientId(String clientId) {
-        Papago.clientId = clientId;
-    }
-
-    @Value("${papago.pw}")
-    public static void setClientSecret(String clientSecret) {
-        Papago.clientSecret = clientSecret;
     }
 }
